feat(api): create revise revision route
